[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.8.0,<3.9"
pymongo = "^4.0.1"
dnspython = "^2.2.0"
Flask = "^2.3.2"
pytube = "^15.0.0"
telegram = "^0.0.1"
validators = "^0.22.0"
requests = "^2.31.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"